--- a/update1/src/main/resources/templates/board/adminboard/userList.html
+++ b/update1/src/main/resources/templates/board/adminboard/userList.html
@@ -10,12 +10,16 @@
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link href="https://webfontworld.github.io/pretendard/Pretendard.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/sub1.css">
     <script src="/js/sub.js"></script>
 
     <style>
+
         body {
-            background-color: #f4f4f4;
+            background-color: white; /* 연한 회색 배경 */
+            color: #333; /* 어두운 글자색 */
+
         }
 
         .main {
@@ -24,34 +28,61 @@
         }
 
         .container {
-            max-width: 90%;
+            max-width: 100%;
             margin: 20px auto;
             padding: 20px;
-            background-color: #f6f6f6; /* 연한 그레이 톤 */
             border-radius: 8px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+
         }
 
-        h1 {
-            text-align: center;
-            color: #333;
+
+        .board-main-title{
+            margin-left: -18px;
+            margin-top: 20px;
+            margin-bottom: 40px;
+        }
+
+        .board-title{
+            font-weight: bolder;
+            font-size: 40px;
+        }
+
+        .board-sub-title{
+            margin-left: 40px;
+            font-size: 17px;
+            margin-top: 25px;
+            color: gray;
+            margin-bottom: 30px;
         }
 
         table {
-            width: 100%;
-            margin-top: 20px;
+            width: 100%; /* 전체 폭을 늘림 */
+            border-collapse: collapse;
             border-spacing: 0;
+            margin: auto; /* 가운데 정렬을 위해 margin 속성 추가 */
+            background-color: white; /* 흰색 테이블 배경 */
         }
 
         th, td {
             border-bottom: 1px solid #ddd;
-            padding: 10px;
-            text-align: left;
+            padding: 15px;
+            text-align: center;
         }
 
         th {
-            background-color: #4e8cff; /* 산호 세련된 파랑 */
-            color: #fff;
+            background-color: white; /* 분홍색 헤더 배경 */
+            color: black; /* 어두운 글자색으로 변경 */
+            /* 위아래 여백을 늘림 */
+            font-size: 14px;
+            border-top: 1px solid #222222;
+            border-bottom: 1px solid #ddd;
+            padding: 15px;
+            text-align: center; /* 가운데 정렬 추가 */
+        }
+
+        td{
+            padding: 25px;
+            font-size: 15px;
         }
 
         tr.odd {
@@ -63,7 +94,7 @@
         }
 
         tr:hover {
-            background-color: #e3e3e3; /* 더 어두운 그레이 톤 (hover 시) */
+            background-color: #f0f0f0; /* 더 어두운 그레이 톤 (hover 시) */
         }
 
         a {
@@ -78,15 +109,19 @@
 
 <main>
     <section class="main">
-        <div class="container">
+        <div class="container mt-5">
+            <div class="board-main-title">
+                <p class="board-title">｜회원 관리</p>
+                <p class="board-sub-title">회원 목록</p>
+            </div>
             <div>
                 <table>
                     <colgroup>
                         <col style="width: 10%">
-                        <col style="width: 20%">
-                        <col style="width: 20%">
-                        <col style="width: 15%">
-                        <col style="width: 25%">
+                        <col style="width: 21%">
+                        <col style="width: 23%">
+                        <col style="width: 24%">
+                        <col style="width: 12%">
                         <col style="width: 10%">
                     </colgroup>
                     <thead>
@@ -108,7 +143,10 @@
                         <td th:text="${item.nickName}">닉네임</td>
                         <td th:text="${item.name}">회원명</td>
                         <td th:text="${item.regidate}">가입일</td>
-                        <td th:text="${item.grade}" style="color: red">회원등급</td>
+                        <td>
+                            <div th:if="${item.grade}==0">회원</div>
+                            <div th:unless="${item.grade}==0" style="color: red">관리자</div>
+                        </td>
                     </tr>
                     <tr th:unless="${#lists.size(PageList.getList())} > 0">
                         <td colspan="5">조회된 내용이 없습니다.</td>
@@ -121,17 +159,17 @@
             <ul class="pagination justify-content-center">
 
                 <li class="page-item" th:classappend="${PageList.getPrePage() == 0} ? 'disabled'">
-                    <a class="page-link" href="#" th:href="@{/admin(pageNum=${PageList.getPrePage()})}" aria-label="Previous">
+                    <a class="page-link" href="#" style="color: black" th:href="@{/admin(pageNum=${PageList.getPrePage()})}" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
                 </li>
 
-                <li class="page-item" th:each="page : ${#numbers.sequence(PageList.getNavigateFirstPage(), PageList.getNavigateLastPage())}" th:classappend="${page == PageList.getPageNum()} ? 'active'">
-                    <a class="page-link" href="#" th:href="@{/admin(pageNum=${page})}" th:text="${page}"></a>
+                <li class="page-item" th:each="page : ${#numbers.sequence(PageList.getNavigateFirstPage(), PageList.getNavigateLastPage())}" th:classappend="${page == PageList.getPageNum()}">
+                    <a class="page-link" href="#" style="color: black" th:href="@{/admin(pageNum=${page})}" th:text="${page}"></a>
                 </li>
 
                 <li class="page-item" th:classappend="${PageList.getNextPage() == 0} ? 'disabled'">
-                    <a class="page-link" href="#" th:href="@{/admin(pageNum=${PageList.getNextPage()})}" aria-label="Next">
+                    <a class="page-link" href="#" style="color: black" th:href="@{/admin(pageNum=${PageList.getNextPage()})}" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
                 </li>
