--- a/update1/src/main/resources/templates/park/parkMain.html
+++ b/update1/src/main/resources/templates/park/parkMain.html
@@ -29,18 +29,16 @@
     <script src="/js/script.js"></script>
     <script src="/js/logout.js"></script>
     <style>
-
         /*.nav {width: 100%;}*/
-        .nav_1 li { position: relative; color: transparent; font-size: 30px; margin: 50px; -webkit-text-stroke: 1px black; transition: all .5s;}
+        .nav_1 li {
+            position: relative;
+            font-size: 30px; margin: 50px; -webkit-text-stroke: 1px black; transition: all .5s;}
         .nav_1 li:hover {color: black;}
-        .nav_1 li:hover img {display: block; z-index: 1}
-        .nav_1 li img { display: none; border: 1px solid black; position: absolute; left: 50%; top: 50%; width: 400px; height: 500px; transform: translate(-50%,-50%); z-index: -1; transition: all .5s; border-radius: 15px;}
+        .nav_1 li:hover img {display: block;}
+        .nav_1 li img {display: none; position: absolute; left: 50%; top: 50%; width: 400px; height: 500px; transform: translate(-50%,-50%); z-index: -1; transition: all .5s; border-radius: 15px;}
         .spot1{
             margin: auto;
-
         }
-
-
     </style>
 
 </head>
@@ -55,7 +53,7 @@
 <div class="sub2_top">
 
 </div>
-<div class="back">
+
 <div id="sub2">
     <h2>뛰어봤나! 여기가 부산이다!</h2>
     <h4>민소매가 추천해요.</h4>
@@ -81,31 +79,26 @@
             </ul>
         </div>
         <br><br><br>
+
     </div>
-    </div>
-</div>
+
     <div class="spot1" style="height: 500px">
         <img src="/img/runimg1.jfif" style="height: auto; width: 45%" alt="1">
         <div class="spottext">
             <h3>런린이의 기초상식</h3>
-            <br>
-            <p>러닝은 간단해 보여도 올바르게 시작하는 것이 중요합니다. <br>
-                <br>
-                1. 적절한 신발을 착용하세요!<br>
-                2. 올바른 자세를 유지하세요!<br>
-                3. 속도와 거리를 점진적으로 늘려가세요!<br>
-                <br>
-                항상 기초를 기억하여 안전한 러닝을 합시다!</p>
+            <p>런닝은 간단한 것처럼 보일 수 있지만, 올바른 기초를 알고 시작하는 것이 중요합니다. <br>
+                1. 적절한 신발 착용<br>
+                2. 올바른 자세 유지<br>
+                3. 러닝을 시작할 때는 천천히 걷거나 달리기를 시작하고, 점진적으로 속도와 거리를 늘려가며 몸을 적응시킵니다.<br>
+                이러한 기초를 기억하면 부상의 위험을 줄이고, 효과적이고 안전한 러닝 경험을 얻을 수 있습니다.</p>
         </div>
     </div>
     <div class="spot2">
         <div class="spottext">
             <h3>함께 뛰어요!</h3>
-            <br>
-            <p>러닝크루에 참여해보세요!<br>
-                <br>
-                러닝은 개인 운동이지만, 사람들과 함께 할 수 있는 운동이기도 합니다!<br>
-                사회적 활동의 즐거움과 더불어 서로에게 동기 부여가 될 수 있습니다!</p>
+            <p>다양한 경험을 나누고 목표 달성을 위해 서로 동기를 부여할 수 있습니다 <br>
+                러닝은 개인 운동이지만, 러닝크루에 참여하면 사회적 활동의 즐거움을 느낄 수 있습니다. <br>
+                러닝크루는 다양한 러너들의 경험을 공유하는 플랫폼입니다. 새로운 루트, 운동 기술, 용품 등에 대한 유용한 정보를 얻을 수 있습니다.</p>
         </div>
         <img src="/img/runtoge.jfif" style="height: auto; width: 45%" alt="함께">
     </div>
@@ -113,10 +106,8 @@
         <img src="/img/maraton.jfif" alt="마라톤" style="height: auto; width: 45%">
         <div class="spottext">
             <h3>도전의 순간, 당신의 마라톤을 시작하세요!</h3>
-            <br>
-            <p>더 나은 자신,<br> 건강한 삶,<br> 그리고 끝없는 성장!<br>
-                <br>
-                당신의 한계를 넘어 새롭게 거듭나보세요! 🏃‍♂️🌟 </p>
+            <p>더 나은 자신, 건강한 삶, 그리고 끝없는 성장이 당신을 기다리고 있습니다. <br>
+                함께 달려, 당신의 한계를 넘어 최고의 버전으로 거듭나보세요! 🏃‍♂️🌟 </p>
         </div>
     </div>
 
