--- a/update1/src/main/resources/templates/layout/header.html
+++ b/update1/src/main/resources/templates/layout/header.html
@@ -54,7 +54,7 @@
                     <div class="sub"> <!--배경색-->
                         <div class="sub_in"> <!--가운데 창-->
                             <ul class="menu1">
-                                <li><a href="#">소개</a></li>
+                                <li><a href="/main/minsome">소개</a></li>
                             </ul>
 
                         </div>
@@ -93,7 +93,7 @@
                             <ul class="menu3">
                                 <li><a href="/mate">메이트</a></li>
                                 <li><a href="/board">인증</a></li>
-                                <li><a href="#">아이템</a></li>
+                                <li><a href="/view">아이템</a></li>
                             </ul>
                         </div>
                     </div>
