--- a/update1/src/main/resources/templates/board/mateBoard/mateBoardList.html
+++ b/update1/src/main/resources/templates/board/mateBoard/mateBoardList.html
@@ -10,6 +10,7 @@
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="/js/sub.js"></script>
     <link rel="stylesheet" href="/css/sub1.css">
     <link rel="stylesheet" href="/css/board/boardList.css">
     <link href="https://webfontworld.github.io/pretendard/Pretendard.css" rel="stylesheet">
