--- a/update1/src/main/resources/templates/board/adminboard/userList.html
+++ b/update1/src/main/resources/templates/board/adminboard/userList.html
@@ -12,7 +12,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link href="https://webfontworld.github.io/pretendard/Pretendard.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/sub1.css">
+    <script src="/js/logout.js"></script>
     <script src="/js/sub.js"></script>
+
 
     <style>
 
