--- a/update1/src/main/resources/templates/layout/header.html
+++ b/update1/src/main/resources/templates/layout/header.html
@@ -50,7 +50,7 @@
             <a href="/main/minsome" class="_link"><img src="/img/minsome_s_m.png" sizes="20" alt="로고"></a>
 
             <ul class="nav">
-                <li><a href="#">소개</a>
+                <li><a href="/main/minsome">소개</a>
                     <div class="sub"> <!--배경색-->
                         <div class="sub_in"> <!--가운데 창-->
                             <ul class="menu1">
