--- a/update1/src/main/resources/templates/mypage/mypage.html
+++ b/update1/src/main/resources/templates/mypage/mypage.html
@@ -103,7 +103,7 @@ main{
     <a class="side_1" href="#">민소매 정보</a>
     <a href="#">정보 수정</a>
     <a href="#">민소매 활동</a>
-    <a href="#">회원탈퇴</a>
+    <a href="/mypage/delete">회원탈퇴</a>
 </div>
 
 
