--- a/update1/src/main/resources/templates/park/parkMain.html
+++ b/update1/src/main/resources/templates/park/parkMain.html
@@ -33,8 +33,8 @@
         .nav_1 li {
             position: relative;
             font-size: 30px; margin: 50px; -webkit-text-stroke: 1px black; transition: all .5s;}
-        .nav_1 li:hover {color: black;}
-        .nav_1 li:hover img {display: block;}
+        .nav_1 li:hover {color: rgba(0, 0, 0, 0); text-decoration: none; }
+        .nav_1 li:hover img {display: block;  }
         .nav_1 li img {display: none; position: absolute; left: 50%; top: 50%; width: 400px; height: 500px; transform: translate(-50%,-50%); z-index: -1; transition: all .5s; border-radius: 15px;}
         .spot1{
             margin: auto;
@@ -74,7 +74,7 @@
                 </li>
                 <li class="riv">
                     갈맷길
-                    <img src="/img/galmemap.jpg" alt="">
+                    <img src="/img/gal2.jpg" alt="">
                 </li>
             </ul>
         </div>
