--- a/update1/src/main/resources/templates/board/adminboard/userManage.html
+++ b/update1/src/main/resources/templates/board/adminboard/userManage.html
@@ -12,13 +12,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/sub1.css">
     <link href="https://webfontworld.github.io/pretendard/Pretendard.css" rel="stylesheet">
-
+    <script src="/js/logout.js"></script>
+    <script src="/js/sub.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
-    <script src="/js/sub.js"></script>
     <div th:replace="~{/layout/header :: header-basic}"></div>
 
     <script>
