폰트링크 추가

--- a/update1/src/main/resources/templates/board/shotboard/shotBoardUpdate.html
+++ b/update1/src/main/resources/templates/board/shotboard/shotBoardUpdate.html
@@ -10,6 +10,7 @@
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link href="https://webfontworld.github.io/pretendard/Pretendard.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/sub1.css">
     <script src="/js/logout.js"></script>
     <link rel="stylesheet" href="/css/board/boardDetail.css">
