--- a/update1/src/main/resources/templates/park/parkDetail.html
+++ b/update1/src/main/resources/templates/park/parkDetail.html
@@ -11,6 +11,7 @@
             integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <!-- aos css -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://webfontworld.github.io/pretendard/Pretendard.css" rel="stylesheet">
 
     <!-- css 연결 -->
     <link rel="stylesheet" href="/css/detail/detail.css">
