--- a/update1/src/main/resources/templates/view.html
+++ b/update1/src/main/resources/templates/view.html
@@ -155,7 +155,7 @@
 
             <div class="mySlides2">
                 <h3>주니어를 위한 러닝화</h3>
-                <img src="/img/주니어/나이키_인피니티런.png" style="width:100%">
+                <img src="/img/주니어/나이키_인피티니런.png" style="width:100%">
             </div>
 
             <div class="mySlides2">
