--- a/update1/src/main/resources/templates/mypage/delete.html
+++ b/update1/src/main/resources/templates/mypage/delete.html
@@ -14,7 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
-
+  <link rel="stylesheet" href="/css/sidebar.css">
   <script
           src="https://code.jquery.com/jquery-3.7.1.js"
           integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
@@ -35,49 +35,6 @@
     font-family: "Lato", sans-serif;
   }
 
-  .sidenav {
-    height: 500px;
-    width: 180px;
-    position: absolute;
-    z-index: 1;
-
-    left: 400px;
-    border-top: 2px solid black;
-    border-left: 2px solid black;
-    border-right: 2px solid black;
-
-    background-color: white;
-    overflow-x: hidden;
-    padding-top: 20px;
-  }
-
-  .sidenav a {
-
-    padding: 6px 6px 6px 32px;
-    text-decoration: none;
-    font-size: 20px;
-    color: dodgerblue;
-    display: block;
-  }
-  .side_1{
-    border-top: none;
-    border-bottom: 1px solid black;
-  }
-
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }
-  main{
-    min-height: 1000px;
-  }
-  .main {
-    margin-left: 400px; /* Same as the width of the sidenav */
-  }
-
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
 
   .pass_inform{
     padding-bottom: 30px;
@@ -116,12 +73,16 @@
 <div th:replace="~{/layout/header :: header-basic}"></div>
 <div class="container">
   <main>
-    <div class="sidenav">
-      <a class="side_1" href="#">민소매 정보</a>
-      <a href="#">정보 수정</a>
-      <a href="#">민소매 활동</a>
-      <a href="/mypage/delete">회원탈퇴</a>
-    </div>
+    <div class="container">
+      <main>
+        <div class="sidenav">
+          <a class="side_1" href="#"><img src="/img/minsome_s_m.png"></a>
+          <a  class="side_2" th:text="${session.nickName}"></a>
+
+          <a class="side_3" href="#">정보 수정</a>
+          <a class="side_4" href="#">민소매 활동</a>
+          <a class="side_5" href="/mypage/delete">회원탈퇴</a>
+        </div>
 
 
     <div class="main">
