--- a/update1/src/main/resources/templates/mypage/mypage.html
+++ b/update1/src/main/resources/templates/mypage/mypage.html
@@ -24,86 +24,25 @@
     <link rel="stylesheet" href="/css/sub1.css">
 
     <link rel="stylesheet" href="/css/sidebar.css">
-
+    <script src="/css/sidebar.css"></script>
     <script src="/js/sub.js"></script>
     <script src="/js/script.js"></script>
     <meta charset="UTF-8">
 </head>
 <style>
-    body {
-        font-family: "Lato", sans-serif;
-    }
 
-    .sidenav {
-        height: 500px;
-        width: 180px;
-        position: absolute;
-        z-index: 1;
-
-        left: 400px;
-        border-top: 2px solid black;
-        border-left: 2px solid black;
-        border-right: 2px solid black;
-
-        background-color: white;
-        overflow-x: hidden;
-        padding-top: 20px;
-    }
-
-    .sidenav a {
-
-        padding: 6px 6px 6px 32px;
-        text-decoration: none;
-        font-size: 20px;
-        color: dodgerblue;
-        display: block;
-    }
-    .side_1{
-        border-top: none;
-        border-bottom: 1px solid black;
-    }
-
-    .sidenav a:hover {
-        color: #f1f1f1;
-    }
-main{
-    min-height: 1000px;
-}
-    .main {
-        margin-left: 400px; /* Same as the width of the sidenav */
-    }
-
-    @media screen and (max-height: 450px) {
-        .sidenav {padding-top: 15px;}
-        .sidenav a {font-size: 18px;}
-    }
-
-    .pass_inform{
-        padding-bottom: 30px;
-        border-top: 1px solid darkgray;
-        border-bottom: 1px solid darkgray;
-    }
-
-    .form_1{
-        padding-top: 150px;
-        width: 600px;
-    }
-    .btn_area{
-        margin-right: 250px;
-    }
-    .btn_area>button{
-        font-size: 25px;
-    }
 </style>
 <body>
 <div th:replace="~{/layout/header :: header-basic}"></div>
 <div class="container">
     <main>
 <div class="sidenav">
-    <a class="side_1" href="#">민소매 정보</a>
-    <a href="#">정보 수정</a>
-    <a href="#">민소매 활동</a>
-    <a href="/mypage/delete">회원탈퇴</a>
+    <a class="side_1" href="#"><img src="/img/minsome_s_m.png"></a>
+    <a  class="side_2" href="/mypage/about" th:text="${session.nickName}"></a>
+
+    <a class="side_3" href="#">정보 수정</a>
+    <a class="side_4" href="#">민소매 활동</a>
+    <a class="side_5" href="/mypage/delete">회원탈퇴</a>
 </div>
 
 
@@ -127,7 +66,7 @@ main{
         </div>
     </form>
     <div class="d-flex justify-content-center btn_area">
-    <button type="button" style="width: 250px"   class="btn btn-primary mt-2">확인</button>
+        <button type="button" style="width: 250px"   class="btn btn-primary mt-2">확인</button>
     </div>
 
 </div>
