--- a/update1/src/main/resources/templates/layout/header.html
+++ b/update1/src/main/resources/templates/layout/header.html
@@ -29,7 +29,7 @@
 
                 <li class="p_user"><p th:text="${session.nickName} +'님'"></p></li>
                 <li class="p_user"><p>반갑습니다.</p></li>
-                <li><a href="/mypage/mypage" th:href="@{/mypage/mypage}">MYPage</a></li>
+                <li><a href="/mypage/about" th:href="@{/mypage/about}">MyPage</a></li>
                 <li><button id="logout_btn" class="btn_out" type="button">Logout</button></li>
 
 
