--- a/update1/src/main/resources/templates/mypage/about.html
+++ b/update1/src/main/resources/templates/mypage/about.html
@@ -48,8 +48,7 @@
             <a class="side_1" href="#"><img src="/img/minsome_s_m.png"></a>
             <a  class="side_2" href="/mypage/about" th:text="${session.nickName}"></a>
 
-            <a class="side_3" href="#">정보 수정</a>
-            <a class="side_4" href="#">민소매 활동</a>
+            <a class="side_3" href="/mypage/mypage">정보 수정</a>
             <a class="side_5" href="/mypage/delete">회원탈퇴</a>
         </div>
 
