--- a/update1/src/main/resources/templates/mypage/mypage.html
+++ b/update1/src/main/resources/templates/mypage/mypage.html
@@ -23,53 +23,107 @@
 
     <link rel="stylesheet" href="/css/sub1.css">
 
-    <link rel="stylesheet" href="/css/sidebar.css">
-    <script src="/css/sidebar.css"></script>
+    <link rel="stylesheet" href="/css/mypage/mypageAbout.css">
+
     <script src="/js/sub.js"></script>
     <script src="/js/script.js"></script>
     <meta charset="UTF-8">
 </head>
 <style>
 
+    .table{
+        border: none;
+        text-align: center;
+
+        margin-left: 20px;
+        margin-top: 20px;
+        width: 300px;
+    }
+    .input_length{
+        width: 200px;
+    }
+    .col-form-label{
+        margin-left: 24px;
+
+    }
+
 </style>
 <body>
 <div th:replace="~{/layout/header :: header-basic}"></div>
 <div class="container">
     <main>
-<div class="sidenav">
-    <a class="side_1" href="#"><img src="/img/minsome_s_m.png"></a>
-    <a  class="side_2" href="/mypage/about" th:text="${session.nickName}"></a>
+        <div class="sidenav">
+            <a class="side_1" href="#"><img src="/img/minsome_s_m.png"></a>
+            <a  class="side_2" href="/mypage/about" th:text="${session.nickName}"></a>
 
-    <a class="side_3" href="#">정보 수정</a>
-    <a class="side_4" href="#">민소매 활동</a>
-    <a class="side_5" href="/mypage/delete">회원탈퇴</a>
-</div>
+            <a class="side_3" href="/mypage/mypage">정보 수정</a>
+            <a class="side_5" href="/mypage/delete">회원탈퇴</a>
+        </div>
 
 
-<div class="main">
-    <form class="form_1">
-        <h3>개인정보 확인</h3>
-        <h5 style="font-weight: bolder">비밀번호 재확인</h5>
-        <p>회원님의 정보를 안전하게 보호하기 위해 비밀번호를 다시 한번 확인해주세요.</p>
-        <div class="pass_inform">
+        <div class="main">
+            <form action="/mypage/mypageEditProcess" class="form_1" method="post">
+                <h4 class="ps-4 pt-3">나의 정보</h4>
 
-            <div class="form-floating mt-4 col-sm-8">
-                <input type="password" id="pass" class="form-control">
-                <label for="pass" class="">비밀번호</label>
-            </div>
 
-                <div class="form-floating mt-5 col-sm-8">
-                    <input type="password" id="pass_chk" class="form-control">
-                    <label for="pass_chk"  >비밀번호 재확인</label>
+                <div class="ps-4 pt-3">
+                    <span style="font-weight: bold">아이디 </span>
+                    <span class="ps-1 " th:text="${member.getId()}"></span>
+                    <input type="hidden" th:value="${member.getId()}" name="id" >
+                </div>
+                <div class="form-group row pt-3">
+                    <label style="font-weight:bold" class="col-sm-1 col-form-label mr-2" for="nick">nick</label>
+                    <input type="text" class="form-control  input_length" name="nickName" id="nick" th:placeholder="${member.getNickName()}">
+
                 </div>
 
-        </div>
-    </form>
-    <div class="d-flex justify-content-center btn_area">
-        <button type="button" style="width: 250px"   class="btn btn-primary mt-2">확인</button>
-    </div>
+                <div class="form-group row pt-3">
+                    <label style="font-weight:bold" class="col-sm-1 col-form-label mr-2" for="pass">pass</label>
+                    <input type="pass" class="form-control  input_length" name="password" id="pass" th:placeholder="${member.getPassword()}">
 
-</div>
+                </div>
+                <div class="form-group row pt-3">
+                    <label style="font-weight:bold" class="col-sm-1 col-form-label mr-2" for="name">이름</label>
+                    <input type="text" class="form-control  input_length" name="name" id="name" th:placeholder="${member.getName()}">
+
+                </div>
+
+                <div class="ps-4 pt-3">
+                    <span style="font-weight: bold">연락처 </span>
+                    <span class="ps-1 " >010-****-****</span>
+                </div>
+
+                <div class="ps-4 pt-3">
+                    <span style="font-weight: bold">주소 </span>
+                    <span class="ps-1 " >부산광역시 부산진구 중앙대로 708 부산 피아낸스센터 빌딩</span>
+                </div>
+                <div class="ps-4 pt-3">
+                    <span style="font-weight: bold">회원 등급</span>
+                    <span class="ps-1 " >민소매 회원</span>
+                </div>
+                <table class="table" style="border: 1px solid #f8f9fa">
+                    <thead >
+                    <tr>
+                        <th style="border: 1px solid #f8f9fa">게시글 수</th>
+                        <th>댓글 수</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td style="border: 1px solid #f8f9fa" th:text="${member.getCommCount()}"></td>
+                        <td th:text="${member.getReCount()}"></td>
+
+                    </tr>
+
+                    </tbody>
+                </table>
+                <div>
+                    <button class="btn btn-primary form-control" type="submit">수정</button>
+                </div>
+            </form>
+
+
+        </div>
     </main>
 </div>
 <div th:replace="~{/layout/footer :: footer-basic}"></div>
